# cli

./: .gitignore  .worktreeinclude  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PRD.md  PRD_DEPS.md  PRD_DEPS_CONDENSED.md  PRD_DEPS_TESTING.md  PRD_USER_PERSPECTIVE.md  PRD_V0.md  README.md  RELEASING.md  SECURITY.md  _redirects  build_darwin.sh  build_linux_win.sh  build_release.sh  cli.sh  deny.toml  harness  package.json  pyproject.toml
.claude/: settings.json
.codex/: hooks.json
.github/: CODEOWNERS
.github/workflows/: dogfood-check-cve.yml  homebrew-bump.yml  npm-publish.yml  release-binaries.yml  release.yml  security-audit.yml  staging-contract.yml  static.yml  test.yml  update_docs..yml
Formula/: corgea-cli.rb
examples/: deps_skill.rs
scripts/: postinstall.js  test-local-npm.sh
scripts/ci/: version_ahead.py
scripts/npm/: bundle-binaries.js  prepare-platform-package.js  publish.sh
skills/corgea/: SKILL.md
src/: authorize.rs  cicd.rs  config.rs  inspect.rs  lib.rs  list.rs  log.rs  login.rs  main.rs  scan.rs  setup_hooks.rs  skill.rs  targets.rs  utils.rs  wait.rs
src/osv/: mod.rs
src/precheck/: detect.rs  exec.rs  mod.rs  parse.rs  render.rs  test_support.rs  tree.rs  uv.rs  verdict.rs
src/scanners/: blast.rs  fortify.rs
src/scanners/parsers/: checkmarx.rs  coverity.rs  mod.rs  sarif.rs  semgrep.rs
src/utils/: api.rs  err.rs  generic.rs  github.rs  terminal.rs
src/verify_deps/: mod.rs  npm.rs  python.rs  registry.rs  report.rs  severity.rs
src/vuln_api/: mod.rs
src/vuln_api_stub/: fixtures.rs  mod.rs
tests/: check_cve_http_errors.rs  check_cve_preflight.rs  cli_bare_install.rs  cli_command_surface.rs  cli_deps.rs  cli_deps_skill.rs  cli_exec_fallback.rs  cli_install.rs  cli_npm_audit.rs  cli_npm_ci.rs  cli_provenance.rs  cli_refusal_context.rs  cli_remediation.rs  cli_tree.rs  cli_uv_sync.rs  cli_verdict.rs  cve_concurrency.rs  cve_severity_filter.rs  deps_fail_cve.rs  harness_smoke.rs  list_resolution.rs  logging_e2e.rs  skill_doc_mentions_check_cve.rs  vuln_api_contract.rs  wait_resolution.rs
tests/common/: concurrency_stub.rs  mod.rs  vuln_api_stub.rs
tests/fixtures/: README.md  vuln-db.json
tests/fixtures/go-mod-smoke/: go.mod  go.sum
tests/fixtures/java-gradle/: build.gradle  gradle.lockfile
tests/fixtures/java-maven/: pom.xml
tests/fixtures/malformed/: not-xml-pom.xml  package-lock.json  package.json  pyproject.toml
tests/fixtures/node-app/: package-lock.json  package.json
tests/fixtures/node-app/.corgea/: deps.yml
tests/fixtures/node-monorepo/: package-lock.json  package.json
tests/fixtures/node-pnpm/: package.json  pnpm-lock.yaml
tests/fixtures/node-stale/: package-lock.json  package.json
tests/fixtures/node-transitive/: package-lock.json  package.json
tests/fixtures/node-yarn/: package.json
tests/fixtures/python-pip-nolock/: requirements.txt
tests/fixtures/python-poetry/: pyproject.toml
tests/fixtures/python-poetry-multi/: pyproject.toml
tests/fixtures/python-uv-requirements/: pyproject.toml
tests/fixtures/vuln_api/: README.md  advisory_detail.json  check_clean.json  check_malware.json  check_unknown.json  check_vulnerable.json
