[package]
name = "corgea"
version = "1.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
dirs = "5.0.1"
reqwest = { version = "0.12.23", default-features = false, features = [
    "blocking",
    "json",
    "multipart",
    "native-tls",
    "system-proxy",
] }
toml = "0.8.8"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_derive = "1.0.195"
uuid = { version = "1.7.0", features = ["v4"] }
which = "6.0.0"
zip = "2.3.0"
tempfile = "3.12.0"
quick-xml = "0.36.1"
ignore = "0.4"
globset = "0.4"
termcolor = "1.1"
git2 = { version = "0.20.0", default-features = false }
regex = "1"
chrono = "0.4"

[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
