[package]
name = "corgea"
version = "1.9.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "corgea"
path = "src/main.rs"

[features]
# Compiles the in-crate vuln-api test stub (`vuln_api_stub`). Enabled for all
# test builds via the self dev-dependency below; never part of release builds.
test-stub = []

[dev-dependencies]
corgea = { path = ".", features = ["test-stub"] }

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
dirs = "5.0.1"
reqwest = { version = "0.12.23", default-features = false, features = [
    "blocking",
    "cookies",
    "gzip",
    "json",
    "multipart",
    "native-tls",
    "system-proxy",
] }
toml = "0.8.8"
log = "0.4"
env_logger = "0.11"
semver = "1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_derive = "1.0.195"
uuid = { version = "1.7.0", features = ["v4"] }
which = "6.0.0"
zip = "2.3.0"
tempfile = "3.12.0"
quick-xml = "0.36.1"
ignore = "0.4"
globset = "0.4"
termcolor = "1.1"
git2 = { version = "0.20.4", default-features = false }
regex = "1"
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1"
http-body-util = "0.1"
url = "2.5"
open = "5.0"
urlencoding = "2.1"
serde_yaml_ng = "0.10"

[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
