[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "corgea-cli"
description = "The Corgea CLI. Scan for vulnerabilties, create fixes."
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
]
authors = [
    { name = "Adam Bronte", email = "adam@corgea.com" }
]
dynamic = ["version"]

[project.urls]
Homepage = "https://corgea.com"
Documentation = "https://docs.corgea.app"
Repository = "https://github.com/Corgea/cli"
Issues = "https://github.com/Corgea/cli/issues"
Changelog = "https://github.com/Corgea/cli/releases"

[tool.maturin]
bindings = "bin"
strip = true
